// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`binary.js 1`] = `
const funnelSnapshotCard = (report === MY_OVERVIEW &&
  !ReportGK.xar_metrics_active_capitol_v2) ||
  (report === COMPANY_OVERVIEW &&
    !ReportGK.xar_metrics_active_capitol_v2_company_metrics)
  ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  : null;

room = room.map((row, rowIndex) => (
  row.map((col, colIndex) => (
    (rowIndex === 0 || colIndex === 0 || rowIndex === height || colIndex === width) ? 1 : 0
  ))
))
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const funnelSnapshotCard =
  (report === MY_OVERVIEW && !ReportGK.xar_metrics_active_capitol_v2) ||
  (report === COMPANY_OVERVIEW &&
    !ReportGK.xar_metrics_active_capitol_v2_company_metrics) ? (
    <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  ) : null;

room = room.map((row, rowIndex) =>
  row.map(
    (col, colIndex) =>
      rowIndex === 0 ||
      colIndex === 0 ||
      rowIndex === height ||
      colIndex === width
        ? 1
        : 0
  )
);

`;

exports[`binary.js 2`] = `
const funnelSnapshotCard = (report === MY_OVERVIEW &&
  !ReportGK.xar_metrics_active_capitol_v2) ||
  (report === COMPANY_OVERVIEW &&
    !ReportGK.xar_metrics_active_capitol_v2_company_metrics)
  ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  : null;

room = room.map((row, rowIndex) => (
  row.map((col, colIndex) => (
    (rowIndex === 0 || colIndex === 0 || rowIndex === height || colIndex === width) ? 1 : 0
  ))
))
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const funnelSnapshotCard =
    (report === MY_OVERVIEW && !ReportGK.xar_metrics_active_capitol_v2) ||
    (report === COMPANY_OVERVIEW &&
        !ReportGK.xar_metrics_active_capitol_v2_company_metrics) ? (
        <ReportMetricsFunnelSnapshotCard metrics={metrics} />
    ) : null;

room = room.map((row, rowIndex) =>
    row.map(
        (col, colIndex) =>
            rowIndex === 0 ||
            colIndex === 0 ||
            rowIndex === height ||
            colIndex === width
                ? 1
                : 0
    )
);

`;

exports[`binary.js 3`] = `
const funnelSnapshotCard = (report === MY_OVERVIEW &&
  !ReportGK.xar_metrics_active_capitol_v2) ||
  (report === COMPANY_OVERVIEW &&
    !ReportGK.xar_metrics_active_capitol_v2_company_metrics)
  ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  : null;

room = room.map((row, rowIndex) => (
  row.map((col, colIndex) => (
    (rowIndex === 0 || colIndex === 0 || rowIndex === height || colIndex === width) ? 1 : 0
  ))
))
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const funnelSnapshotCard =
	(report === MY_OVERVIEW && !ReportGK.xar_metrics_active_capitol_v2) ||
	(report === COMPANY_OVERVIEW &&
		!ReportGK.xar_metrics_active_capitol_v2_company_metrics) ? (
		<ReportMetricsFunnelSnapshotCard metrics={metrics} />
	) : null;

room = room.map((row, rowIndex) =>
	row.map(
		(col, colIndex) =>
			rowIndex === 0 ||
			colIndex === 0 ||
			rowIndex === height ||
			colIndex === width
				? 1
				: 0
	)
);

`;

exports[`binary.js 4`] = `
const funnelSnapshotCard = (report === MY_OVERVIEW &&
  !ReportGK.xar_metrics_active_capitol_v2) ||
  (report === COMPANY_OVERVIEW &&
    !ReportGK.xar_metrics_active_capitol_v2_company_metrics)
  ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  : null;

room = room.map((row, rowIndex) => (
  row.map((col, colIndex) => (
    (rowIndex === 0 || colIndex === 0 || rowIndex === height || colIndex === width) ? 1 : 0
  ))
))
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const funnelSnapshotCard =
	(report === MY_OVERVIEW && !ReportGK.xar_metrics_active_capitol_v2) ||
	(report === COMPANY_OVERVIEW &&
		!ReportGK.xar_metrics_active_capitol_v2_company_metrics) ? (
		<ReportMetricsFunnelSnapshotCard metrics={metrics} />
	) : null;

room = room.map((row, rowIndex) =>
	row.map(
		(col, colIndex) =>
			rowIndex === 0 ||
			colIndex === 0 ||
			rowIndex === height ||
			colIndex === width
				? 1
				: 0
	)
);

`;

exports[`indent.js 1`] = `
aaaaaaaaaaaaaaa ? bbbbbbbbbbbbbbbbbb : ccccccccccccccc ? ddddddddddddddd : eeeeeeeeeeeeeee ? fffffffffffffff : gggggggggggggggg

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

a
    ? {
        a: 0
      }
    : {
        a: {
             a: 0
           }
            ? {
                a: 0
              }
            : {
                y: {
                    a: 0
                }
                    ? {
                        a: 0
                    }
                    : {
                        a: 0
                    }
            }
      }

a
	? {
			a: function() {
				return a
					? {
							a: [
								a
									? {
											a: 0,
											b: [
												a
													? [
															0,
															1
													  ]
													: []
											]
									  }
									: [
											[
												0,
												{
													a: 0
												},
												a
													? 0
													: 1
											],
											function() {
												return a
													? {
															a: 0
													  }
													: [
															{
																a: 0
															},
															{}
													  ];
											}
									  ]
							]
					  }
					: [
							a
								? function() {
										a
											? a(
													a
														? {
																a: a(
																	{
																		a: 0
																	}
																)
														  }
														: [
																0,
																a(),
																a(
																	a(),
																	{
																		a: 0
																	},
																	a
																		? a()
																		: a(
																				{
																					a: 0
																				}
																		  )
																),
																a()
																	? {
																			a: a(),
																			b: []
																	  }
																	: {}
														  ]
											  ):
										a(
											a()
												? {
														a: 0
												  }
												: (function(a) {
														return a()
															? [
																	{
																		a: 0,
																		b: a()
																	}
															  ]
															: a(
																	[
																		a
																			? {
																					a: 0
																			  }
																			: {},
																		{
																			a: 0
																		}
																	]
															  );
												  })(
														a
															? function(a) {
																	return function() {
																		return 0;
																	};
															  }
															: function(a) {
																	return function() {
																		return 1;
																	}
															  }
												  )
										);
								  }
								: function() {
										
								  }
					  ];
			}
	  }
    : a;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
aaaaaaaaaaaaaaa
  ? bbbbbbbbbbbbbbbbbb
  : ccccccccccccccc
    ? ddddddddddddddd
    : eeeeeeeeeeeeeee
      ? fffffffffffffff
      : gggggggggggggggg;

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  ? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    ? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
      ? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
      : aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    : aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  : aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa;

a
  ? {
      a: 0
    }
  : {
      a: {
        a: 0
      }
        ? {
            a: 0
          }
        : {
            y: {
              a: 0
            }
              ? {
                  a: 0
                }
              : {
                  a: 0
                }
          }
    };

a
  ? {
      a: function() {
        return a
          ? {
              a: [
                a
                  ? {
                      a: 0,
                      b: [a ? [0, 1] : []]
                    }
                  : [
                      [
                        0,
                        {
                          a: 0
                        },
                        a ? 0 : 1
                      ],
                      function() {
                        return a
                          ? {
                              a: 0
                            }
                          : [
                              {
                                a: 0
                              },
                              {}
                            ];
                      }
                    ]
              ]
            }
          : [
              a
                ? function() {
                    a
                      ? a(
                          a
                            ? {
                                a: a({
                                  a: 0
                                })
                              }
                            : [
                                0,
                                a(),
                                a(
                                  a(),
                                  {
                                    a: 0
                                  },
                                  a
                                    ? a()
                                    : a({
                                        a: 0
                                      })
                                ),
                                a()
                                  ? {
                                      a: a(),
                                      b: []
                                    }
                                  : {}
                              ]
                        )
                      : a(
                          a()
                            ? {
                                a: 0
                              }
                            : (function(a) {
                                return a()
                                  ? [
                                      {
                                        a: 0,
                                        b: a()
                                      }
                                    ]
                                  : a([
                                      a
                                        ? {
                                            a: 0
                                          }
                                        : {},
                                      {
                                        a: 0
                                      }
                                    ]);
                              })(
                                a
                                  ? function(a) {
                                      return function() {
                                        return 0;
                                      };
                                    }
                                  : function(a) {
                                      return function() {
                                        return 1;
                                      };
                                    }
                              )
                        );
                  }
                : function() {}
            ];
      }
    }
  : a;

`;

exports[`indent.js 2`] = `
aaaaaaaaaaaaaaa ? bbbbbbbbbbbbbbbbbb : ccccccccccccccc ? ddddddddddddddd : eeeeeeeeeeeeeee ? fffffffffffffff : gggggggggggggggg

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

a
    ? {
        a: 0
      }
    : {
        a: {
             a: 0
           }
            ? {
                a: 0
              }
            : {
                y: {
                    a: 0
                }
                    ? {
                        a: 0
                    }
                    : {
                        a: 0
                    }
            }
      }

a
	? {
			a: function() {
				return a
					? {
							a: [
								a
									? {
											a: 0,
											b: [
												a
													? [
															0,
															1
													  ]
													: []
											]
									  }
									: [
											[
												0,
												{
													a: 0
												},
												a
													? 0
													: 1
											],
											function() {
												return a
													? {
															a: 0
													  }
													: [
															{
																a: 0
															},
															{}
													  ];
											}
									  ]
							]
					  }
					: [
							a
								? function() {
										a
											? a(
													a
														? {
																a: a(
																	{
																		a: 0
																	}
																)
														  }
														: [
																0,
																a(),
																a(
																	a(),
																	{
																		a: 0
																	},
																	a
																		? a()
																		: a(
																				{
																					a: 0
																				}
																		  )
																),
																a()
																	? {
																			a: a(),
																			b: []
																	  }
																	: {}
														  ]
											  ):
										a(
											a()
												? {
														a: 0
												  }
												: (function(a) {
														return a()
															? [
																	{
																		a: 0,
																		b: a()
																	}
															  ]
															: a(
																	[
																		a
																			? {
																					a: 0
																			  }
																			: {},
																		{
																			a: 0
																		}
																	]
															  );
												  })(
														a
															? function(a) {
																	return function() {
																		return 0;
																	};
															  }
															: function(a) {
																	return function() {
																		return 1;
																	}
															  }
												  )
										);
								  }
								: function() {
										
								  }
					  ];
			}
	  }
    : a;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
aaaaaaaaaaaaaaa
    ? bbbbbbbbbbbbbbbbbb
    : ccccccccccccccc
        ? ddddddddddddddd
        : eeeeeeeeeeeeeee
            ? fffffffffffffff
            : gggggggggggggggg;

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    ? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
        ? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
            ? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
            : aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
        : aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    : aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa;

a
    ? {
          a: 0
      }
    : {
          a: {
              a: 0
          }
              ? {
                    a: 0
                }
              : {
                    y: {
                        a: 0
                    }
                        ? {
                              a: 0
                          }
                        : {
                              a: 0
                          }
                }
      };

a
    ? {
          a: function() {
              return a
                  ? {
                        a: [
                            a
                                ? {
                                      a: 0,
                                      b: [a ? [0, 1] : []]
                                  }
                                : [
                                      [
                                          0,
                                          {
                                              a: 0
                                          },
                                          a ? 0 : 1
                                      ],
                                      function() {
                                          return a
                                              ? {
                                                    a: 0
                                                }
                                              : [
                                                    {
                                                        a: 0
                                                    },
                                                    {}
                                                ];
                                      }
                                  ]
                        ]
                    }
                  : [
                        a
                            ? function() {
                                  a
                                      ? a(
                                            a
                                                ? {
                                                      a: a({
                                                          a: 0
                                                      })
                                                  }
                                                : [
                                                      0,
                                                      a(),
                                                      a(
                                                          a(),
                                                          {
                                                              a: 0
                                                          },
                                                          a
                                                              ? a()
                                                              : a({
                                                                    a: 0
                                                                })
                                                      ),
                                                      a()
                                                          ? {
                                                                a: a(),
                                                                b: []
                                                            }
                                                          : {}
                                                  ]
                                        )
                                      : a(
                                            a()
                                                ? {
                                                      a: 0
                                                  }
                                                : (function(a) {
                                                      return a()
                                                          ? [
                                                                {
                                                                    a: 0,
                                                                    b: a()
                                                                }
                                                            ]
                                                          : a([
                                                                a
                                                                    ? {
                                                                          a: 0
                                                                      }
                                                                    : {},
                                                                {
                                                                    a: 0
                                                                }
                                                            ]);
                                                  })(
                                                      a
                                                          ? function(a) {
                                                                return function() {
                                                                    return 0;
                                                                };
                                                            }
                                                          : function(a) {
                                                                return function() {
                                                                    return 1;
                                                                };
                                                            }
                                                  )
                                        );
                              }
                            : function() {}
                    ];
          }
      }
    : a;

`;

exports[`indent.js 3`] = `
aaaaaaaaaaaaaaa ? bbbbbbbbbbbbbbbbbb : ccccccccccccccc ? ddddddddddddddd : eeeeeeeeeeeeeee ? fffffffffffffff : gggggggggggggggg

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

a
    ? {
        a: 0
      }
    : {
        a: {
             a: 0
           }
            ? {
                a: 0
              }
            : {
                y: {
                    a: 0
                }
                    ? {
                        a: 0
                    }
                    : {
                        a: 0
                    }
            }
      }

a
	? {
			a: function() {
				return a
					? {
							a: [
								a
									? {
											a: 0,
											b: [
												a
													? [
															0,
															1
													  ]
													: []
											]
									  }
									: [
											[
												0,
												{
													a: 0
												},
												a
													? 0
													: 1
											],
											function() {
												return a
													? {
															a: 0
													  }
													: [
															{
																a: 0
															},
															{}
													  ];
											}
									  ]
							]
					  }
					: [
							a
								? function() {
										a
											? a(
													a
														? {
																a: a(
																	{
																		a: 0
																	}
																)
														  }
														: [
																0,
																a(),
																a(
																	a(),
																	{
																		a: 0
																	},
																	a
																		? a()
																		: a(
																				{
																					a: 0
																				}
																		  )
																),
																a()
																	? {
																			a: a(),
																			b: []
																	  }
																	: {}
														  ]
											  ):
										a(
											a()
												? {
														a: 0
												  }
												: (function(a) {
														return a()
															? [
																	{
																		a: 0,
																		b: a()
																	}
															  ]
															: a(
																	[
																		a
																			? {
																					a: 0
																			  }
																			: {},
																		{
																			a: 0
																		}
																	]
															  );
												  })(
														a
															? function(a) {
																	return function() {
																		return 0;
																	};
															  }
															: function(a) {
																	return function() {
																		return 1;
																	}
															  }
												  )
										);
								  }
								: function() {
										
								  }
					  ];
			}
	  }
    : a;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
aaaaaaaaaaaaaaa
	? bbbbbbbbbbbbbbbbbb
	: ccccccccccccccc
		? ddddddddddddddd
		: eeeeeeeeeeeeeee
			? fffffffffffffff
			: gggggggggggggggg;

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
	? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
		? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
			? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
			: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
		: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
	: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa;

a
	? {
			a: 0
	  }
	: {
			a: {
				a: 0
			}
				? {
						a: 0
				  }
				: {
						y: {
							a: 0
						}
							? {
									a: 0
							  }
							: {
									a: 0
							  }
				  }
	  };

a
	? {
			a: function() {
				return a
					? {
							a: [
								a
									? {
											a: 0,
											b: [a ? [0, 1] : []]
									  }
									: [
											[
												0,
												{
													a: 0
												},
												a ? 0 : 1
											],
											function() {
												return a
													? {
															a: 0
													  }
													: [
															{
																a: 0
															},
															{}
													  ];
											}
									  ]
							]
					  }
					: [
							a
								? function() {
										a
											? a(
													a
														? {
																a: a({
																	a: 0
																})
														  }
														: [
																0,
																a(),
																a(
																	a(),
																	{
																		a: 0
																	},
																	a
																		? a()
																		: a({
																				a: 0
																		  })
																),
																a()
																	? {
																			a: a(),
																			b: []
																	  }
																	: {}
														  ]
											  )
											: a(
													a()
														? {
																a: 0
														  }
														: (function(a) {
																return a()
																	? [
																			{
																				a: 0,
																				b: a()
																			}
																	  ]
																	: a([
																			a
																				? {
																						a: 0
																				  }
																				: {},
																			{
																				a: 0
																			}
																	  ]);
														  })(
																a
																	? function(a) {
																			return function() {
																				return 0;
																			};
																	  }
																	: function(a) {
																			return function() {
																				return 1;
																			};
																	  }
														  )
											  );
								  }
								: function() {}
					  ];
			}
	  }
	: a;

`;

exports[`indent.js 4`] = `
aaaaaaaaaaaaaaa ? bbbbbbbbbbbbbbbbbb : ccccccccccccccc ? ddddddddddddddd : eeeeeeeeeeeeeee ? fffffffffffffff : gggggggggggggggg

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
?
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
:
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

a
    ? {
        a: 0
      }
    : {
        a: {
             a: 0
           }
            ? {
                a: 0
              }
            : {
                y: {
                    a: 0
                }
                    ? {
                        a: 0
                    }
                    : {
                        a: 0
                    }
            }
      }

a
	? {
			a: function() {
				return a
					? {
							a: [
								a
									? {
											a: 0,
											b: [
												a
													? [
															0,
															1
													  ]
													: []
											]
									  }
									: [
											[
												0,
												{
													a: 0
												},
												a
													? 0
													: 1
											],
											function() {
												return a
													? {
															a: 0
													  }
													: [
															{
																a: 0
															},
															{}
													  ];
											}
									  ]
							]
					  }
					: [
							a
								? function() {
										a
											? a(
													a
														? {
																a: a(
																	{
																		a: 0
																	}
																)
														  }
														: [
																0,
																a(),
																a(
																	a(),
																	{
																		a: 0
																	},
																	a
																		? a()
																		: a(
																				{
																					a: 0
																				}
																		  )
																),
																a()
																	? {
																			a: a(),
																			b: []
																	  }
																	: {}
														  ]
											  ):
										a(
											a()
												? {
														a: 0
												  }
												: (function(a) {
														return a()
															? [
																	{
																		a: 0,
																		b: a()
																	}
															  ]
															: a(
																	[
																		a
																			? {
																					a: 0
																			  }
																			: {},
																		{
																			a: 0
																		}
																	]
															  );
												  })(
														a
															? function(a) {
																	return function() {
																		return 0;
																	};
															  }
															: function(a) {
																	return function() {
																		return 1;
																	}
															  }
												  )
										);
								  }
								: function() {
										
								  }
					  ];
			}
	  }
    : a;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
aaaaaaaaaaaaaaa
	? bbbbbbbbbbbbbbbbbb
	: ccccccccccccccc
		? ddddddddddddddd
		: eeeeeeeeeeeeeee
			? fffffffffffffff
			: gggggggggggggggg;

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
	? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
		? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
			? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
			: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
		: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
	: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa;

a
	? {
			a: 0
	  }
	: {
			a: {
				a: 0
			}
				? {
						a: 0
				  }
				: {
						y: {
							a: 0
						}
							? {
									a: 0
							  }
							: {
									a: 0
							  }
				  }
	  };

a
	? {
			a: function() {
				return a
					? {
							a: [
								a
									? {
											a: 0,
											b: [a ? [0, 1] : []]
									  }
									: [
											[
												0,
												{
													a: 0
												},
												a ? 0 : 1
											],
											function() {
												return a
													? {
															a: 0
													  }
													: [
															{
																a: 0
															},
															{}
													  ];
											}
									  ]
							]
					  }
					: [
							a
								? function() {
										a
											? a(
													a
														? {
																a: a({
																	a: 0
																})
														  }
														: [
																0,
																a(),
																a(
																	a(),
																	{
																		a: 0
																	},
																	a
																		? a()
																		: a({
																				a: 0
																		  })
																),
																a()
																	? {
																			a: a(),
																			b: []
																	  }
																	: {}
														  ]
											  )
											: a(
													a()
														? {
																a: 0
														  }
														: (function(a) {
																return a()
																	? [
																			{
																				a: 0,
																				b: a()
																			}
																	  ]
																	: a([
																			a
																				? {
																						a: 0
																				  }
																				: {},
																			{
																				a: 0
																			}
																	  ]);
														  })(
																a
																	? function(
																			a
																	  ) {
																			return function() {
																				return 0;
																			};
																	  }
																	: function(
																			a
																	  ) {
																			return function() {
																				return 1;
																			};
																	  }
														  )
											  );
								  }
								: function() {}
					  ];
			}
	  }
	: a;

`;

exports[`nested.js 1`] = `
let icecream = what == "cone"
  ? p => !!p ? \`here's your \${p} cone\` : \`just the empty cone for you\`
  : p => \`here's your \${p} \${what}\`;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
let icecream =
  what == "cone"
    ? p => (!!p ? \`here's your \${p} cone\` : \`just the empty cone for you\`)
    : p => \`here's your \${p} \${what}\`;

`;

exports[`nested.js 2`] = `
let icecream = what == "cone"
  ? p => !!p ? \`here's your \${p} cone\` : \`just the empty cone for you\`
  : p => \`here's your \${p} \${what}\`;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
let icecream =
    what == "cone"
        ? p => (!!p ? \`here's your \${p} cone\` : \`just the empty cone for you\`)
        : p => \`here's your \${p} \${what}\`;

`;

exports[`nested.js 3`] = `
let icecream = what == "cone"
  ? p => !!p ? \`here's your \${p} cone\` : \`just the empty cone for you\`
  : p => \`here's your \${p} \${what}\`;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
let icecream =
	what == "cone"
		? p => (!!p ? \`here's your \${p} cone\` : \`just the empty cone for you\`)
		: p => \`here's your \${p} \${what}\`;

`;

exports[`nested.js 4`] = `
let icecream = what == "cone"
  ? p => !!p ? \`here's your \${p} cone\` : \`just the empty cone for you\`
  : p => \`here's your \${p} \${what}\`;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
let icecream =
	what == "cone"
		? p => (!!p ? \`here's your \${p} cone\` : \`just the empty cone for you\`)
		: p => \`here's your \${p} \${what}\`;

`;

exports[`parenthesis.js 1`] = `
debug ? this.state.isVisible ? "partially visible" : "hidden" : null;
debug ? this.state.isVisible && somethingComplex ? "partially visible" : "hidden" : null;

a => a ? () => {a} : () => {a}
a => a ? a : a
a => a ? aasdasdasdasdasdasdaaasdasdasdasdasdasdasdasdasdasdasdasdasdaaaaaa : a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
debug ? (this.state.isVisible ? "partially visible" : "hidden") : null;
debug
  ? this.state.isVisible && somethingComplex
    ? "partially visible"
    : "hidden"
  : null;

a =>
  a
    ? () => {
        a;
      }
    : () => {
        a;
      };
a => (a ? a : a);
a =>
  a ? aasdasdasdasdasdasdaaasdasdasdasdasdasdasdasdasdasdasdasdasdaaaaaa : a;

`;

exports[`parenthesis.js 2`] = `
debug ? this.state.isVisible ? "partially visible" : "hidden" : null;
debug ? this.state.isVisible && somethingComplex ? "partially visible" : "hidden" : null;

a => a ? () => {a} : () => {a}
a => a ? a : a
a => a ? aasdasdasdasdasdasdaaasdasdasdasdasdasdasdasdasdasdasdasdasdaaaaaa : a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
debug ? (this.state.isVisible ? "partially visible" : "hidden") : null;
debug
    ? this.state.isVisible && somethingComplex
        ? "partially visible"
        : "hidden"
    : null;

a =>
    a
        ? () => {
              a;
          }
        : () => {
              a;
          };
a => (a ? a : a);
a =>
    a ? aasdasdasdasdasdasdaaasdasdasdasdasdasdasdasdasdasdasdasdasdaaaaaa : a;

`;

exports[`parenthesis.js 3`] = `
debug ? this.state.isVisible ? "partially visible" : "hidden" : null;
debug ? this.state.isVisible && somethingComplex ? "partially visible" : "hidden" : null;

a => a ? () => {a} : () => {a}
a => a ? a : a
a => a ? aasdasdasdasdasdasdaaasdasdasdasdasdasdasdasdasdasdasdasdasdaaaaaa : a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
debug ? (this.state.isVisible ? "partially visible" : "hidden") : null;
debug
	? this.state.isVisible && somethingComplex
		? "partially visible"
		: "hidden"
	: null;

a =>
	a
		? () => {
				a;
		  }
		: () => {
				a;
		  };
a => (a ? a : a);
a =>
	a ? aasdasdasdasdasdasdaaasdasdasdasdasdasdasdasdasdasdasdasdasdaaaaaa : a;

`;

exports[`parenthesis.js 4`] = `
debug ? this.state.isVisible ? "partially visible" : "hidden" : null;
debug ? this.state.isVisible && somethingComplex ? "partially visible" : "hidden" : null;

a => a ? () => {a} : () => {a}
a => a ? a : a
a => a ? aasdasdasdasdasdasdaaasdasdasdasdasdasdasdasdasdasdasdasdasdaaaaaa : a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
debug ? (this.state.isVisible ? "partially visible" : "hidden") : null;
debug
	? this.state.isVisible && somethingComplex
		? "partially visible"
		: "hidden"
	: null;

a =>
	a
		? () => {
				a;
		  }
		: () => {
				a;
		  };
a => (a ? a : a);
a =>
	a ? aasdasdasdasdasdasdaaasdasdasdasdasdasdasdasdasdasdasdasdasdaaaaaa : a;

`;

exports[`test.js 1`] = `
const obj0 = conditionIsTruthy ? shortThing : otherShortThing

const obj1 = conditionIsTruthy ? { some: 'long', object: 'with', lots: 'of', stuff } : shortThing

const obj2 = conditionIsTruthy ? shortThing : { some: 'long', object: 'with', lots: 'of', stuff }

const obj3 = conditionIsTruthy ? { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff } : shortThing

const obj4 = conditionIsTruthy ? shortThing : { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff }

const obj5 = conditionIsTruthy ? { some: 'long', object: 'with', lots: 'of', stuff } : { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff }
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const obj0 = conditionIsTruthy ? shortThing : otherShortThing;

const obj1 = conditionIsTruthy
  ? { some: "long", object: "with", lots: "of", stuff }
  : shortThing;

const obj2 = conditionIsTruthy
  ? shortThing
  : { some: "long", object: "with", lots: "of", stuff };

const obj3 = conditionIsTruthy
  ? {
      some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
      object: "with",
      lots: "of",
      stuff
    }
  : shortThing;

const obj4 = conditionIsTruthy
  ? shortThing
  : {
      some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
      object: "with",
      lots: "of",
      stuff
    };

const obj5 = conditionIsTruthy
  ? { some: "long", object: "with", lots: "of", stuff }
  : {
      some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
      object: "with",
      lots: "of",
      stuff
    };

`;

exports[`test.js 2`] = `
const obj0 = conditionIsTruthy ? shortThing : otherShortThing

const obj1 = conditionIsTruthy ? { some: 'long', object: 'with', lots: 'of', stuff } : shortThing

const obj2 = conditionIsTruthy ? shortThing : { some: 'long', object: 'with', lots: 'of', stuff }

const obj3 = conditionIsTruthy ? { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff } : shortThing

const obj4 = conditionIsTruthy ? shortThing : { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff }

const obj5 = conditionIsTruthy ? { some: 'long', object: 'with', lots: 'of', stuff } : { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff }
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const obj0 = conditionIsTruthy ? shortThing : otherShortThing;

const obj1 = conditionIsTruthy
    ? { some: "long", object: "with", lots: "of", stuff }
    : shortThing;

const obj2 = conditionIsTruthy
    ? shortThing
    : { some: "long", object: "with", lots: "of", stuff };

const obj3 = conditionIsTruthy
    ? {
          some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
          object: "with",
          lots: "of",
          stuff
      }
    : shortThing;

const obj4 = conditionIsTruthy
    ? shortThing
    : {
          some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
          object: "with",
          lots: "of",
          stuff
      };

const obj5 = conditionIsTruthy
    ? { some: "long", object: "with", lots: "of", stuff }
    : {
          some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
          object: "with",
          lots: "of",
          stuff
      };

`;

exports[`test.js 3`] = `
const obj0 = conditionIsTruthy ? shortThing : otherShortThing

const obj1 = conditionIsTruthy ? { some: 'long', object: 'with', lots: 'of', stuff } : shortThing

const obj2 = conditionIsTruthy ? shortThing : { some: 'long', object: 'with', lots: 'of', stuff }

const obj3 = conditionIsTruthy ? { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff } : shortThing

const obj4 = conditionIsTruthy ? shortThing : { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff }

const obj5 = conditionIsTruthy ? { some: 'long', object: 'with', lots: 'of', stuff } : { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff }
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const obj0 = conditionIsTruthy ? shortThing : otherShortThing;

const obj1 = conditionIsTruthy
	? { some: "long", object: "with", lots: "of", stuff }
	: shortThing;

const obj2 = conditionIsTruthy
	? shortThing
	: { some: "long", object: "with", lots: "of", stuff };

const obj3 = conditionIsTruthy
	? {
			some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
			object: "with",
			lots: "of",
			stuff
	  }
	: shortThing;

const obj4 = conditionIsTruthy
	? shortThing
	: {
			some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
			object: "with",
			lots: "of",
			stuff
	  };

const obj5 = conditionIsTruthy
	? { some: "long", object: "with", lots: "of", stuff }
	: {
			some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
			object: "with",
			lots: "of",
			stuff
	  };

`;

exports[`test.js 4`] = `
const obj0 = conditionIsTruthy ? shortThing : otherShortThing

const obj1 = conditionIsTruthy ? { some: 'long', object: 'with', lots: 'of', stuff } : shortThing

const obj2 = conditionIsTruthy ? shortThing : { some: 'long', object: 'with', lots: 'of', stuff }

const obj3 = conditionIsTruthy ? { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff } : shortThing

const obj4 = conditionIsTruthy ? shortThing : { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff }

const obj5 = conditionIsTruthy ? { some: 'long', object: 'with', lots: 'of', stuff } : { some: 'eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger', object: 'with', lots: 'of', stuff }
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const obj0 = conditionIsTruthy ? shortThing : otherShortThing;

const obj1 = conditionIsTruthy
	? { some: "long", object: "with", lots: "of", stuff }
	: shortThing;

const obj2 = conditionIsTruthy
	? shortThing
	: { some: "long", object: "with", lots: "of", stuff };

const obj3 = conditionIsTruthy
	? {
			some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
			object: "with",
			lots: "of",
			stuff
	  }
	: shortThing;

const obj4 = conditionIsTruthy
	? shortThing
	: {
			some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
			object: "with",
			lots: "of",
			stuff
	  };

const obj5 = conditionIsTruthy
	? { some: "long", object: "with", lots: "of", stuff }
	: {
			some: "eeeeeeeeeeeeven looooooooooooooooooooooooooooooonger",
			object: "with",
			lots: "of",
			stuff
	  };

`;
